--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "front-end-boilerplate",
+  "name": "gulp-boilerplate",
   "version": "1.2.0",
   "description": "A Front-end boilerplate using Gulp and Sass.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development gulp",
-    "build": "NODE_ENV=production gulp"
+    "start": "gulp"
   },
   "author": "Gao Shanghui",
   "private": true,
@@ -14,19 +13,23 @@
   "devDependencies": {
     "@babel/core": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
     "autoprefixer": "^9.8.6",
-    "browser-sync": "^2.26.14",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.27.4",
+    "browserify": "^17.0.0",
+    "cssnano": "^5.0.6",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0-beta.2",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "rollup": "^2.46.0"
+    "gulp-uglify": "^3.0.2",
+    "postcss": "^8.3.5",
+    "sass": "^1.35.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^4.0.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
