--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-site-boilerplate",
-  "version": "1.0.0",
-  "description": "Static site boilerplate based on the gulpjs.",
+  "version": "0.1.0",
+  "description": "Static site boilerplate based on the gulpjs and webpack.",
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development gulp",
