--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development gulp",
-    "build": "cross-env NODE_ENV=production gulp",
+    "build": "cross-env NODE_ENV=production gulp --silent",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gao Shanghui",
@@ -27,6 +27,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "postcss": "^8.3.5",
     "sass": "^1.35.1",
+    "serve": "^12.0.0",
     "webpack": "^5.43.0",
     "webpack-stream": "^6.1.2"
   },
@@ -35,8 +36,6 @@
     "react-dom": "^17.0.2"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
+    "defaults"
   ]
 }
