--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development gulp",
     "build": "cross-env NODE_ENV=production gulp --silent",
+    "serve": "serve -l 5000 build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gao Shanghui",
@@ -33,8 +34,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "three": "^0.130.1"
+    "react-dom": "^17.0.2"
   },
   "browserslist": [
     "defaults"
