--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Static site boilerplate based on the gulpjs and webpack.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development gulp",
+    "dev": "cross-env NODE_ENV=development gulp",
     "build": "cross-env NODE_ENV=production gulp --silent",
-    "serve": "serve -l 5000 build",
+    "start": "serve -l 5000 build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gao Shanghui",
@@ -16,18 +16,19 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.27.4",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.6",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-ejs": "^5.1.0",
     "gulp-postcss": "^9.0.0",
-    "gulp-pug": "^5.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.9",
     "sass": "^1.35.1",
     "serve": "^12.0.0",
     "webpack": "^5.43.0",
