--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "autoprefixer": "^10.3.7",
@@ -24,21 +25,31 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-ejs": "^5.1.0",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "postcss": "^8.3.9",
     "sass": "^1.35.1",
-    "serve": "^12.0.0",
+    "serve": "^13.0.2",
     "webpack": "^5.43.0",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@babel/runtime": "^7.16.0"
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-transform-runtime"
+      ]
+    ]
+  }
 }
